# weather_station

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.yaml
assets/: index.html
jobs/: WSIOT_consolidated.ktr  WSIOT_consolidated_sensor_1.ktr  WSIOT_consolidated_sensor_2.ktr  WSIOT_consolidated_sensor_3.ktr  WSIOT_delete_table.ktr  WSIOT_fill_table_temporary.ktr  WSIOT_generate_csv_sensor_1.ktr  WSIOT_generate_csv_sensor_2.ktr  WSIOT_generate_csv_sensor_3.ktr  WSIOT_get_amount.ktr  WSIOT_job.kjb  barometry.csv  humidity.csv  plot.py  temperature.csv
report/: Report.prpt
services/: CMakeLists.txt
services/barometry/: CMakeLists.txt
services/barometry/src/: main.c
services/concentrator/: CMakeLists.txt
services/concentrator/include/: concentrator.h
services/concentrator/src/: concentrator.c  main.c
services/concentrator/src/controller/: udp_controller.c  udp_controller.h  udp_events.c  udp_events.h
services/concentrator/src/data_provider/deserializer/: sensor_message_deserializer.c  sensor_message_deserializer.h
services/concentrator/src/domain/entity/: sensor.c  sensor.h
services/concentrator/src/domain/service/: service.c  service.h
services/concentrator/src/dto/: sensor_message.c  sensor_message.h
services/concentrator/src/repository/: repository.c  repository.h
services/concentrator/src/udp_controller/: udp_events.c
services/concentrator/src/web_controller/: web_controller.c  web_controller.h
services/concentrator/src/web_controller/handlers/: handlers.c  handlers.h
services/concentrator/src/web_controller/webserver/: webserver.c  webserver.h
services/franzininho/udp_client/: CMakeLists.txt
services/franzininho/udp_client/main/: CMakeLists.txt  app_main.c  app_tasks.c  app_tasks.h  common.h  message.c  message.h  pressure.c  pressure.h  sntp.c  sntp.h  temperature.c  temperature.h  udp_client.c  udp_client.h
services/humidity/: CMakeLists.txt
services/humidity/src/: main.c
services/producer/: CMakeLists.txt  producer.c  producer.h
services/temperature/: CMakeLists.txt
services/temperature/src/: main.c  temperature.c
sql/: create_schema.sql  install.sql
third_parties/cJSON/: CMakeLists.txt
